# agro-demo

./: .gitignore  README.md  main.py  pyproject.toml
.agdocs/: add-about.md
.agdocs/specs/: add-db.md  serve-main.md
.public-agdocs/conf/: agro.conf.yml
.public-agdocs/guides/: GUIDE.md  special.md.bak
.public-agdocs/specs/: query-web.md
app/: main.py
tests/: test_main.py
