[project]
name = "demo-fastapi"
version = "0.1.0"
description = "A simple FastAPI demo application"
readme = "README.md"
requires-python = ">=3.12"
packages = ["app"]
dependencies = [
    "fastapi>=0.111.0",
    "python-dotenv>=1.1.1",
    "uvicorn[standard]>=0.30.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2.2",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
